--- a/.github/workflows/daily_submodule_update.yml
+++ b/.github/workflows/daily_submodule_update.yml
@@ -16,7 +16,7 @@ jobs:
         submodules: true
 
     - name: Set up environment
-      run: chmod +x ./update_submodules.sh
+      run: chmod a+x update_submodules.sh
 
     - name: Update submodules
       run: ./update_submodules.sh
